--- a/prj3_mvc3/src/main/webapp/index_h.html
+++ b/prj3_mvc3/src/main/webapp/index_h.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script>
- location.href="mainPage.do";
+// location.href="mainPage.do";
 </script>
 </head>
 
 <body>
 
-<!-- <ol>
+ <ol>
 규미
 <li><a href="join.do">회원가입</a></li>
 <li><a href="admin_login.do">로그인</a></li>
@@ -20,8 +20,9 @@
 <li><a href="review_post.do?rv_num=10">규-리뷰글 보기 [review_post] </a></li>
 <li><a href="dashBoard.do">규-어드민 대시보드</a></li>
 <li><a href="member_info.do?user_id=user1">규-어드민 회원열람 [member_info.jsp]</a></li>
-<li><a href="member_board.do">규-어드민 회원게시판 [member_board.jsp]</a></li>
+<li><a href="member_board.do">규-어드민 회원게시판 [member_board.jsp]</li>
 <hr>
+
 경태
 <li><a href="review_list.do">경-해당영화 리뷰리스트 [review_list.jsp]</a></li>
 <li><a href="review_write.do?m_num=2">경-리뷰 쓰기 [review_write.jsp]</a></li>
@@ -45,7 +46,7 @@
 진호
 <li><a href="find_pw.do">비밀번호 찾기</a></li>
 
-</ol> -->
+</ol>
 
 </body>
 </html>
